Close block manager handles as soon as a handle is marked dead.

refs SERVER-18014